Fixed navigation on mobile, added search bar

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-	background:#F9712C url(../img/FeaturedImage.jpg) no-repeat top center;
+	background:#F9712C;
 	padding:0px;
 	margin:0px;
 }
@@ -47,45 +47,6 @@ a:hover {
 	color:#bb5200;
 }
 
-ul.navigation-main {
-	display:inline;
-}
-
-ul.navigation-main li {
-	display:inline;
-	padding:0 10px 0px 0;
-}
-
-/* nav from http://webdesignerwall.com/tutorials/css-responsive-navigation-menu, thank you much <3 */
-.nav {
-	position: relative;
-	margin: 20px 0;
-}
-.nav ul {
-	margin: 0;
-	padding: 0;
-}
-.nav li {
-	margin: 0 5px 10px 0;
-	padding: 0;
-	list-style: none;
-	display: inline-block;
-}
-.nav a {
-	padding: 3px 12px;
-	text-decoration: none;
-	color: #999;
-	line-height: 100%;
-}
-.nav a:hover {
-	color: #000;
-}
-.nav .current a {
-	background: #999;
-	color: #fff;
-	border-radius: 5px;
-}
-
 h1,
 h2,
 h3,
@@ -95,6 +56,28 @@ h6 {
 	font-family:'Antic Slab', serif;
 	font-weight:normal;
 	font-smooth: always;
+}
+
+/*Navigation*/
+#navbar ul {
+	padding:35px 10px;
+	margin:0px;
+	display:inline;
+}
+
+#navbar ul li {
+	display:inline;
+	padding:25px 0;
+	margin:10px 10px 0 0;
+	list-style:none;
+	float:left;
+}
+
+#navbar ul li a:link,
+#navbar ul li a:active,
+#navbar ul li a:visited {
+	text-transform:uppercase;
+	font-size:12px;
 }
 
 dd {
@@ -124,15 +107,9 @@ h4#schedule {
 	padding:20px 0 0 0;
 }
 
-#logo {
-	width:100%;
-	max-width:440px;
-	padding:0px;
-	margin:0px;
-}
-
-#navbar, 
-#tweet {
+#logo {}
+ 
+.padding {
 	padding:35px 0 0 0;
 	margin:0px;
 }
@@ -176,10 +153,8 @@ hr {
 	clear:both;
 }
 
-.hero-unit {
-	background:none;
-	width:90%;
-	max-width:1180px;
+#hero-centered {
+	background:#F9712C url(../img/FeaturedImage.jpg) no-repeat top center;
 	margin:0px auto;
 	text-align:center;
 	padding:80px 0;
@@ -196,8 +171,7 @@ hr {
 	padding:40px 20px;
 	clear:both;
 	margin:0px auto;
-	margin-left:-20px;
-	background:#F9712C;
+	background:#332E2C;
 	color:#fff;
 }
 
@@ -243,7 +217,6 @@ hr {
 
 
 @media (max-width: 480px) {
-
 .container {
 	padding:20px;
 	-moz-border-radius: 0px;
@@ -252,20 +225,35 @@ hr {
 	-khtml-border-radius: 0px; /* for old Konqueror browsers */
 }
 
+#navbar ul li {
+	display:inline;
+	padding:10px 5px;
+	margin:10px 10px 0 0;
+	list-style:none;
+	float:left;
+}
+
+.page-header {
+	padding:20px;
+}
 
 .page-header .container {
 	padding:0px;
 	margin:0px;
 }
 
-ul.navigation-main li {
-	margin:0 0 0 20px;
+#hero-centered {
+	padding:40px 20px;
 }
-
 
 #logo {
 	padding:0px 10px;
 	margin:0px;
+	text-align:center;
+}
+
+.navbar {
+	padding:40px 20px 20px 20px;
 }
 
 
@@ -273,68 +261,8 @@ ul.navigation-main li {
 	padding:40px 0px;
 }
 
-.page-header {
-	padding:20px 0px;
+#tweet {
+	display:none;
 }
-
-.nav {
-	position: relative;
-	min-height: 40px;
-}	
-
-.nav ul {
-	width: 180px;
-	padding: 5px 0;
-	position: absolute;
-	top: 0;
-	left: 0;
-	border: solid 1px #aaa;
-		background: #fff url(images/icon-menu.png) no-repeat 10px 11px;
-		border-radius: 5px;
-		box-shadow: 0 1px 2px rgba(0,0,0,.3);
-}
-	.nav li {
-		display: none; /* hide all <li> items */
-		margin: 0;
-	}
-	.nav .current {
-		display: block; /* show only current <li> item */
-	}
-	.nav a {
-		display: block;
-		padding: 5px 5px 5px 32px;
-		text-align: left;
-	}
-	.nav .current a {
-		background: none;
-		color: #666;
-	}
-
-	/* on nav hover */
-	.nav ul:hover {
-		background-image: none;
-	}
-	.nav ul:hover li {
-		display: block;
-		margin: 0 0 5px;
-	}
-	.nav ul:hover .current {
-		background: url(images/icon-check.png) no-repeat 10px 7px;
-	}
-
-	/* right nav */
-	.nav.right ul {
-		left: auto;
-		right: 0;
-	}
-
-	/* center nav */
-	.nav.center ul {
-		left: 50%;
-		margin-left: -90px;
-	}
-	
-}
-
 
 }
